# docsible

./: .gitignore  ADOPTION_IMPLEMENTATION_GUIDE.md  ADVANCED_COMPLEXITY_EXPLORATION.md  CACHING_ANALYSIS.md  CACHING_IMPLEMENTATION_GUIDE.md  CLI_UX_REDESIGN_GAP_ANALYSIS.md  CODEBASE_ASSESSMENT_AND_REFACTORING_PLAN.md  CODE_REVIEW_RECOMMENDATIONS.md  CONFIGURATION.md  CONTRIBUTING.md  CORE_PY_MODULARIZATION_STRATEGY.md  DOCSIBLE_ATOMIC_ROLE_MIGRATION.md  FIXME_ANALYSIS.md  FOLDER_REORGANIZATION_REPORT.md  INSTALL.md  MANIFEST.in  MARKDOWN_QA_STRATEGY.md  MARKDOWN_RENDERING_ISSUES.md  MODULARIZATION_COMPLETE_SUMMARY.md  PATTERN_ANALYZER_SUMMARY.md  PHASE_5_INTEGRATION_GUIDE.md  PRODUCT_STRATEGY_ANALYSIS.md  PROJECT_STATUS_SUMMARY.md  README.md  SMART_PRESETS_CICD_FRIENDLY.md  STRATEGIC_PLANNING.md  UX_IMPROVEMENTS_ROADMAP.md  pyproject.toml  setup.py  test_implementation_comparison.sh  test_orchestrator_cli.sh
docsible/: __main__.py  cli.py  config.yml  constants.py  exceptions.py  hybrid_template.py  markdown_template.py  phase_patterns.example.yml  template_loader.py
docsible/analyzers/: ANALYZER_GUIDE.md  __init__.py  complexity_analyzer.py  phase_detector.py  task_analysis_facade.py
docsible/commands/: __init__.py  document_collection.py  document_role.py  guide.py  init_config.py  wizard.py
docsible/config/: severity_rules.yml
docsible/defaults/: builder.py  config.py  engine.py
docsible/diagram_builders/: __init__.py  base.py  flowchart.py  formatters.py  sequence.py
docsible/diagrams/: __init__.py  base.py
docsible/formatters/: __init__.py  message_transformer.py  positive_formatter.py  recommendation_formatter.py
docsible/help/: __init__.py
docsible/models/: __init__.py  config.py  enhancement.py  recommendation.py  role.py  severity.py  suppression.py
docsible/presets/: __init__.py  config_manager.py  models.py  registry.py  resolver.py
docsible/renderers/: MIGRATION_GUIDE.md  __init__.py  readme_renderer.py  tag_manager.py
docsible/repositories/: __init__.py  role_repository.py
docsible/suppression/: __init__.py  engine.py  id_gen.py  store.py
docsible/utils/: architecture_diagram.py  cache.py  check_for_error_handling_in_file.py  check_for_missing_type_hints_signatures.py  cli_helpers.py  console.py  dependency_matrix.py  error_handler.py  git.py  integration_diagram.py  mermaid.py  mermaid_sequence.py  metadata.py  network_topology.py  project_structure.py  special_tasks_keys.py  state_diagram.py  template_filters.py  version.py  yaml.py
docsible/validation/: __init__.py  base.py  clarity.py  doc_validator.py  maintenance.py  markdown_validator.py  models.py  scoring.py  truth.py  value.py
docsible/validators/: __init__.py  clarity.py  doc_validator.py  maintenance.py  markdown_fixer.py  markdown_validator.py  models.py  scoring.py  truth.py  value.py
examples/: GRAPH.md  HYBRID.md  pattern_analysis_example.py  pattern_demo.py  suppress.yml
examples/annotated_role/: README.md
examples/ci_pipeline/: README.md  azure-devops-pipeline.yml  github-actions.yml  gitlab-ci.yml  (+1 more)
scripts/: change_version.py
tests/: git_detect_url.py  test_adaptive_documentation.py  test_architecture_diagram.py  test_check_command.py  test_complexity_analyzer.py  test_doc_validator.py  test_dt_update.py  test_enhanced_integrations.py  test_enhanced_recommendation.py  test_init_config.py  test_integration_diagram.py  test_markdown_fixer.py  test_markdown_validator.py  test_mermaid_pagination.py  test_metadata.py  test_project_structure.py  test_readme_generation.py  test_state_diagram.py  test_type.py
(+390 files in other folders)
