# Standard Python project metadata (PEP 621) - works with uv, pip, pyenv
[project]
name = "docsible"
version = "0.8.0"
description = "Document generator for ansible role/collection"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Lucian BLETAN", email = "neuraluc@gmail.com"}
]
keywords = ["ansible", "documentation", "roles", "collections", "readme", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
]

# Core dependencies
dependencies = [
    "click>=8.1.7",
    "PyYAML>=6.0.1",
    "Jinja2>=3.1.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.8",
]

test = [
    "pytest>=7.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]


# URLs for project
[project.urls]
Homepage = "https://github.com/docsible/docsible"
Repository = "https://github.com/docsible/docsible"
Issues = "https://github.com/docsible/docsible/issues"
Documentation = "https://github.com/docsible/docsible"

# Entry points (scripts) - works with uv, pip
[project.scripts]
docsible = "docsible.cli:cli"

# Build system configuration - supports multiple backends
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#########################################################################
# Poetry configuration (for backward compatibility)
[tool.poetry]
name = "docsible"
version = "0.8.0"
description = "Document generator for ansible role/collection"
authors = ["Lucian BLETAN <neuraluc@gmail.com>"]
repository = "https://github.com/docsible/docsible"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.7"
PyYAML = "^6.0.1"
Jinja2 = "^3.1.2"
pydantic = "^2.0.0"


[tool.poetry.scripts]
docsible = 'docsible.cli:cli'

#########################################################################
# uv specific configuration
[tool.uv]
[dependency-groups]
dev =[
    "ruff>=0.14.8",
]
test = [
    "pytest>=7.4.4",
]
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-v"
]

# Hatch configuration for building
[tool.hatch.build.targets.wheel]
packages = ["docsible"]

[tool.hatch.build.targets.sdist]
include = [
    "/docsible",
    "/README.md",
    "/LICENSE",
    "/CONFIGURATION.md",
]
